# serial-monitor

./: pyproject.toml
serial-monitor/: controller.py  gui.py  main.py  model.py  view.py
